html/views/wb/tcdg2016wb.css
/* ... */
#L3StatusBar.Halftime { left: 41.2%; right: 31.1%; top: 92.5%; bottom: 2%; height: 7%; text-align: center; font-size: 4%; z-index: 300; color: pink; }
#L3StatusBar.Postgame { left: 41.4%; right: 31.1%; top: 91.5%; bottom: 2%; height: 7%; text-align: center; font-size: 5%; z-index: 300; color: pink; }

#BottomBarFullWidth { left: 0%; width: 100%; top 0%; height: 100%; text-align: center; z-index: 300; }

#vs { top: 83.6%; height: 7%; left: 52.3%; width: 5.3%; text-align: center; font-size: 3%; color: white; }

#L3Team1Name.AlternateName a.Name { display: none; }
#L3Team1Name:not(.AlternateName) a.AlternateName { display: none; }
#L3Team2Name.AlternateName a.Name { display: none; }
#L3Team2Name:not(.AlternateName) a.AlternateName { display: none; }

#L3Team1Name,#L3Team2Name.SwapTeams { top: 84.1%; height: 4%; left: 41%; width: 13%; text-align: center; overflow: hidden; font-size: 2.5%; color: white; transform: scale(1,2); -webkit-transform: scale(1,2); }

#L3Team2Name,#L3Team1Name.SwapTeams { top: 84.1%; height: 4%; left: 55.9%; width: 13%; text-align: center; overflow: hidden; font-size: 2.5%; color: white; transform: scale(1,2); -webkit-transform: scale(1,2); }

#L3Team1Score,#L3Team2Score.SwapTeams { top: 87.6%; height: 7%; left: 45.4%; width: 4.3%; text-align: center; font-size: 4.5%; color: white; }

#L3Team2Score,#L3Team1Score.SwapTeams { top: 87.6%; height: 7%; left: 60.5%; width: 4.3%; text-align: center; font-size: 4.5%; color: white; }


/* Team Logo sub-box */

#LogoBar { z-index:150; }
#ClockBar { z-index:150; }

#Team1Logo { top: 0.2%; height: 18%; width: 10.5%; left: 22.4%; }
#Team1Logo> img { top: 0%; bottom: 0%; left: 0%; right: 0%; max-height: 100%; max-width: 100%; display: block; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; } /* center img */

#Team2Logo { top: 0.2%; height: 18%; width: 10.5%; left: 72.8%; }
#Team2Logo> img { top: 0%; bottom: 0%; left: 0%; right: 0%; max-height: 100%; max-width: 100%; display: block; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; } /* center img */


#Team1Logo.SwapTeams { left: 60.7%; }
#Team2Logo.SwapTeams { left: 40.9%; }




/*
#Team1Logo,#Team2Logo { bottom: 0; height: 100%; }
#Team1Logo { left: 0%; right: 90%; }
#Team2Logo { left: 90%; right: 0% }
*/

.noBack {
	background-color:rgba(0,255,0,0.0);
}

.hideme {
        visibility: hidden;
}

/* Same css as the pt screen */
.Team {
	position: absolute;
	width: 48.3%;
	top: 0%;
}
.Team thead td { font-size: 100%; position: relative; font-family: 'roboto'; font-weight: bold; background-color: #000; color: #FFF; }
.Teamd { top: 0%; font-size: 100%; font-family: 'roboto'; font-weight: bold; color: #FFF; }
.tdivr { font-size: 58%; position: relative; font-family: 'roboto'; font-weight: bold; color: #FFF; height: 6.5%; }
.Team td { text-align: center; vertical-align: center; font-size: 52%; color: #FFF; }
.Team1  { right: 0.5%; font-family: 'roboto'; font-weight: bold; top: 12%; left: 1%; width: 47%; text-align: center; overflow: hidden;color: white; }
.Teamd1 { left: 0.2%; height: 100%; width: 48%; text-align: center; overflow: hidden;color: white; }
.Team2  { right: 0.5%; font-family: 'roboto'; font-weight: bold; top: 12%; left: 51%; width: 47%; text-align: center; overflow: hidden;color: white; }
.Teamd2 { left: 51%; height: 100%; width: 48%; text-align: center; overflow: hidden;color: white; }
/*
.Team1 { right: 0.5%; font-family: 'roboto'; font-weight: bold; top: 12%; left: 1%; width: 47%; text-align: center; overflow: hidden;color: white; transform: scale(1,2); -webkit-transform: scale(1,2); }
.Team2 { right: 0.5%; font-family: 'roboto'; font-weight: bold; top: 12%; left: 51%; width: 47%; text-align: center; overflow: hidden;color: white; transform: scale(1,2); -webkit-transform: scale(1,2); }
*/
.Team .Name .Number, .Team .Box, .Team .FO_EXP, .Team .Total { width: 5%; }
.Number { left: 0%; width: 10%; text-align: right; }
.Name { left: 12%; width: 44%; height: 100%; text-align: left; overflow: hidden; }
/* .Team tr:nth-child(4n-2), .Team tr:nth-child(4n-0) { background-color: #CCC; } */
/* .Penalty { height: 50%; } */
/* 
.Teamd1 { height: 50%; }
.Teamd2 { height: 50%; }
*/
/*
.Team .Warn1 { background-color: #fffd38; }
.Team .Warn1:nth-child(4n-2), .Team .Warn1:nth-child(4n-0) { background-color: #ccca2d; }
.Team .Warn2 { background-color: #ff8f2b; }
.Team .Warn2:nth-child(4n-2), .Team .Warn2:nth-child(4n-0) { background-color: #cc7222; }
.Team .Warn3 { background-color: #ff8080; }
.Team .Warn3:nth-child(4n-2), .Team .Warn3:nth-child(4n-0) { background-color: #cc2d2d; }
*/
.PenaltyEditor .Codes>div { float: left; width: 150px; height: 80px; margin: 10px; font-weight: bold; }
.PenaltyEditor .Codes>div.Active { background-color: #F00; color: #FFF; }
.PenaltyEditor .Codes>div div { text-align: center; }
.PenaltyEditor .Codes>div .Code { font-size: 52%; background-color: #FAA; color: #000; }
.PenaltyEditor .Codes>div .Description { font-size: 51%; }

.Team1custColor { top: 0%; left: 0%; height: 100%; width:30%; background-color: #000000; opacity: .6; }
.Team2custColor { top: 0%; right: 0%; height: 100%; width:30%; background-color: #000000; opacity: .6; }

.Box { color: #FFF; width: 4%; font-size: 90%; top: 6%; }
.Box1 { left: 56.5%; }
.Box2 { left: 60.3%; }
.Box3 { left: 64.2%; }
.Box4 { left: 68.1%; }
.Box5 { left: 72%; }
.Box6 { left: 75.9%; }
.Box7 { left: 79.8%; }
.Box8 { left: 83.9%; }
.Box9 { left: 87.9%; }
.BoxFO_EXP { top: 12%; left: 92.3%; color: #FFF; font-size: 76%; }
.Total { left: 97%; color: #FFF; }

